...
                                .frame(height: 50)
                                .cornerRadius(25)
                                .shadow(radius: 2)
                            
                            TextField("Search...", text: $searchWord)
                                .keyboardType(.alphabet)
                                .accessibility(label: Text("searchField"))
                                .padding(.horizontal, 40)
                        }.offset(y: -self.value)
                        .animation(.spring())
                        .onAppear() {
                            NotificationCenter.default.addObserver(forName: UIResponder.keyboardWillShowNotification, object: nil, queue: .main) { (noti) in
                                let value = noti.userInfo![UIResponder.keyboardFrameEndUserInfoKey] as! CGRect
...
                        }.onTapGesture {
                            self.loadData()

                        }.onLongPressGesture {
                            self.showSearchWordMenu = true
                        }
                        .accessibility(label: Text("searchButton"))
                    }
                }
            }.padding()
        }
    }
    
...
